// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  >
    <div
      class="sc-fTFjTM gRVoHi"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  >
    <div
      class="sc-dZoequ hlYJfB"
    >
      <div
        class="sc-ggpjZQ ceJAjz"
      >
        Max column width:
        <input
          class="sc-cmaqmh gvCOcw"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-kOHTFB hGThMb"
  >
    <div
      class="sc-klVQfs iMtWui"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-kOHTFB hGThMb"
  >
    <pre
      class="sc-gmPhUn hfAeOS"
    >
      ╒═══╕
│x  │
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
